# qml_presentation_system_qtstyle

./: CMakeLists.txt  Code.qml  CustomCodeSlide.qml  NativeInterface.cpp  NativeInterface.h  QtStyle.qml  SlideDeck.qml  Style.qml  co_await2.cpp  co_return.cpp  co_return.txt  declarativehttpserver.qml  fibonacci.cpp  imports.qrc  main.cpp  main.qml  mouseevent.cpp  operator_coawait.h  promise_type.h  qpresentation.pro  qtquickcontrols2.conf  resources.qrc  simple.cpp  sporting.cpp
imports/Qt/labs/presentation/: qmldir
